{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 147,
  "lineage": "cc92a4e8-aa28-cece-5f7f-d814bb9283ec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:157870833554:internet-gateway/igw-0888eb562ece247ac",
            "id": "igw-0888eb562ece247ac",
            "owner_id": "157870833554",
            "vpc_id": "vpc-0bb3b6205c3746638"
          },
          "dependencies": [
            "aws_vpc.ticket_slave_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ticket_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:157870833554:loadbalancer/app/ticket-lb/8421d9311e2db6e2",
            "arn_suffix": "app/ticket-lb/8421d9311e2db6e2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ticket-lb-54262343.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:157870833554:loadbalancer/app/ticket-lb/8421d9311e2db6e2",
            "idle_timeout": 400,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ticket-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a82da6d327a5dc1a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08e70ad5c03fd612a"
              },
              {
                "subnet_id": "subnet-0cc500c147e1971b6"
              }
            ],
            "subnets": [
              "subnet-08e70ad5c03fd612a",
              "subnet-0cc500c147e1971b6"
            ],
            "vpc_id": "vpc-0bb3b6205c3746638",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.ticket_slave_security_group",
            "aws_subnet.ticket_slave_subnet_1",
            "aws_subnet.ticket_slave_subnet_2",
            "aws_vpc.ticket_slave_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:157870833554:listener/app/ticket-lb/8421d9311e2db6e2/4a7ded251c5e5bca",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:157870833554:targetgroup/my-targetgroup/8aaea9dd540ce872",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:157870833554:listener/app/ticket-lb/8421d9311e2db6e2/4a7ded251c5e5bca",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:157870833554:loadbalancer/app/ticket-lb/8421d9311e2db6e2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ticket_lb",
            "aws_lb_target_group.my_target_group",
            "aws_security_group.ticket_slave_security_group",
            "aws_subnet.ticket_slave_subnet_1",
            "aws_subnet.ticket_slave_subnet_2",
            "aws_vpc.ticket_slave_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:157870833554:targetgroup/my-targetgroup/8aaea9dd540ce872",
            "arn_suffix": "targetgroup/my-targetgroup/8aaea9dd540ce872",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:157870833554:targetgroup/my-targetgroup/8aaea9dd540ce872",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-targetgroup",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bb3b6205c3746638"
          },
          "dependencies": [
            "aws_vpc.ticket_slave_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ticket_slave_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:157870833554:route-table/rtb-00beeebd7d252cdc9",
            "id": "rtb-00beeebd7d252cdc9",
            "owner_id": "157870833554",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0888eb562ece247ac",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0888eb562ece247ac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ticket_slave_route_table"
            },
            "tags_all": {
              "Name": "ticket_slave_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb3b6205c3746638"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.ticket_slave_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc042d7f4aa80dc0",
            "route_table_id": "rtb-00beeebd7d252cdc9",
            "subnet_id": "subnet-08e70ad5c03fd612a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.ticket_slave_route_table",
            "aws_subnet.ticket_slave_subnet_1",
            "aws_vpc.ticket_slave_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0908dcfc02b916176",
            "route_table_id": "rtb-00beeebd7d252cdc9",
            "subnet_id": "subnet-0cc500c147e1971b6"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.ticket_slave_route_table",
            "aws_subnet.ticket_slave_subnet_2",
            "aws_vpc.ticket_slave_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ticket_slave_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:157870833554:security-group/sg-0a82da6d327a5dc1a",
            "description": "allow web traffic HTTP \u0026 HTTPS - no ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a82da6d327a5dc1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Database Access from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ticket_slave_security_group",
            "name_prefix": "",
            "owner_id": "157870833554",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow web"
            },
            "tags_all": {
              "Name": "allow web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb3b6205c3746638"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ticket_slave_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-1254993478",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a82da6d327a5dc1a",
            "security_group_rule_id": "sgr-0bdc3e1336486ac85",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ticket_slave_security_group",
            "aws_vpc.ticket_slave_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_mysql_from_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3566072396",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a82da6d327a5dc1a",
            "security_group_rule_id": "sgr-0e0133b4ca45913b2",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ticket_slave_security_group",
            "aws_vpc.ticket_slave_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ticket_slave_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:157870833554:subnet/subnet-08e70ad5c03fd612a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e70ad5c03fd612a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "157870833554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ticket_slave_subnet_1"
            },
            "tags_all": {
              "Name": "ticket_slave_subnet_1"
            },
            "vpc_id": "vpc-0bb3b6205c3746638"
          },
          "dependencies": [
            "aws_vpc.ticket_slave_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ticket_slave_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:157870833554:subnet/subnet-0cc500c147e1971b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc500c147e1971b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "157870833554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ticket_slave_subnet_2"
            },
            "tags_all": {
              "Name": "ticket_slave_subnet_2"
            },
            "vpc_id": "vpc-0bb3b6205c3746638"
          },
          "dependencies": [
            "aws_vpc.ticket_slave_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ticket_slave_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:157870833554:vpc/vpc-0bb3b6205c3746638",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-019de63cbcddf1299",
            "default_route_table_id": "rtb-076c3e878b25bfe85",
            "default_security_group_id": "sg-00da1e543bf5f6e02",
            "dhcp_options_id": "dopt-01541a829dd9d7d04",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bb3b6205c3746638",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076c3e878b25bfe85",
            "owner_id": "157870833554",
            "tags": {
              "Name": "ticket_slave_VPC"
            },
            "tags_all": {
              "Name": "ticket_slave_VPC"
            }
          }
        }
      ]
    }
  ]
}